[gd_scene load_steps=2 format=3 uid="uid://c7nkhrjws5emw"]

[ext_resource type="Script" path="res://classes/login_form/login_form.gd" id="1_dnqlb"]

[node name="LoginForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnqlb")

[node name="Username" type="LineEdit" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="LoginButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="HiscoresButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Hiscores"
